--- a/src/components/Modal/CategoryModal/CategoryModal.less
+++ b/src/components/Modal/CategoryModal/CategoryModal.less
@@ -1,5 +1,5 @@
 .modalButton {
-  background-color: #1890ff;
+  background-color: #b7eb8f;
   margin-top: 5px;
   font-size: 15px;
   font-weight: 600;
@@ -10,4 +10,22 @@
 .cancelButton {
   float: right;
   margin-right: 5px;
+}
+.CategoryModalStyles{
+  :global .ant-modal-body {
+    padding: 24px 24px 1px 24px;
+  }
+  :global .ant-modal-header {
+    background: #b7eb8f;
+    border-bottom: 1px solid #f0f0f0;
+  }
+  :global .ant-modal-close {
+    color: black;
+  }
+  :global .ant-input {
+    border: 1px solid #f0f0f0;
+  }
+  :global .ant-btn {
+    border-color: #f0f0f0;
+  }
 }
