--- a/src/components/TableComponent/Table.less
+++ b/src/components/TableComponent/Table.less
@@ -1,10 +1,14 @@
 .margin {
   margin-top: 1rem;
 }
-.location {
+.TableStyles {
   width: 1000px;
   margin: auto;
-}
-.ant-table-wrapper {
-  background-color: blue;
+  font-weight: 600;
+  :global .ant-table-row-level-0 {
+    background-color: #b7eb8f;
+  }
+  :global .ant-table-row {
+     border-bottom: 1px solid black;
+  }
 }
