--- a/src/components/Modal/ItemModal/ItemModal.less
+++ b/src/components/Modal/ItemModal/ItemModal.less
@@ -5,3 +5,24 @@
   float: right;
   margin-right: 5px;
 }
+.ItemModalStyles {
+  :global .ant-modal-body {
+    padding: 24px 24px 1px 24px;
+  }
+  :global .ant-modal-header {
+    background: #b7eb8f;
+    border-bottom: 1px solid #f0f0f0;
+  }
+  :global .ant-modal-close {
+    color: black;
+  }
+  :global .ant-input {
+    border: 1px solid #f0f0f0;
+  }
+  :global .ant-picker {
+    border: 1px solid #f0f0f0;
+  }
+  :global .ant-btn {
+    border-color: #f0f0f0;
+  }
+}
