--- a/src/components/TableComponent/Table.less
+++ b/src/components/TableComponent/Table.less
@@ -7,8 +7,6 @@
   font-weight: 600;
   :global .ant-table-row-level-0 {
     background-color: #b7eb8f;
-  }
-  :global .ant-table-row {
-     border-bottom: 1px solid black;
+    width: 1000px;
   }
 }
