--- a/src/components/TableComponent/Table.less
+++ b/src/components/TableComponent/Table.less
@@ -9,4 +9,11 @@
     background-color: #b7eb8f;
     width: 1000px;
   }
+  :global .ant-table-row-expand-icon {
+    background-color: #b7eb8f;
+    border: 1px solid #b7eb8f;
+  }
+  :global .ant-table-tbody > tr.ant-table-row:hover > td {
+    background: unset;
+  }
 }
