--- a/src/components/PageHeader/Navbar.less
+++ b/src/components/PageHeader/Navbar.less
@@ -1,3 +1,6 @@
 .sitepageheader {
-  background-color: #b7eb8f;
+  width: 1000px;
+  margin: auto;
+  background-color: #d3adf7;
+  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
 }
