--- a/src/components/Modal/CategoryModal/CategoryModal.less
+++ b/src/components/Modal/CategoryModal/CategoryModal.less
@@ -1,8 +1,11 @@
-.modalButton {
-  background-color: #b7eb8f;
-  margin-top: 5px;
-  font-size: 15px;
+.categoryModalButton:hover {
+  background-color: #dbb9fa;
+}
+span {
   font-weight: 600;
+}
+.modalButton {
+    margin-top: 5px;
 }
 .okButton {
   float: right;
@@ -11,12 +14,12 @@
   float: right;
   margin-right: 5px;
 }
-.CategoryModalStyles{
+.CategoryModalStyles {
   :global .ant-modal-body {
     padding: 24px 24px 1px 24px;
   }
   :global .ant-modal-header {
-    background: #b7eb8f;
+    background: #d3adf7;
     border-bottom: 1px solid #f0f0f0;
   }
   :global .ant-modal-close {
