--- a/src/components/Modal/ItemModal/ItemModal.less
+++ b/src/components/Modal/ItemModal/ItemModal.less
@@ -1,3 +1,6 @@
+.itemModalButton:hover {
+  background-color: #dbb9fa;
+}
 .okButton {
   float: right;
 }
@@ -10,7 +13,7 @@
     padding: 24px 24px 1px 24px;
   }
   :global .ant-modal-header {
-    background: #b7eb8f;
+    background: #d3adf7;
     border-bottom: 1px solid #f0f0f0;
   }
   :global .ant-modal-close {
