--- a/src/components/SpentsTable/SpentsTable.less
+++ b/src/components/SpentsTable/SpentsTable.less
@@ -11,16 +11,28 @@
   font-weight: 600;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
   :global .ant-table-row-level-0 {
-    background-color: #d3adf7;
+    background-color: #5a9216;
+    color: #c5e1a5;
+  }
+  :global .ant-table-row-level-1 {
+    background-color: #8bc34a;
+    color: #33691e;
   }
   :global .ant-table-row-expand-icon {
-    background-color: #d3adf7;
-    border: 1px solid #d3adf7;
+    background-color: #5a9216;
+    border: 1px solid #5a9216;
   }
   :global .ant-table-tbody > tr.ant-table-row:hover > td {
     background: unset;
   }
   :global .ant-table-tbody > tr.ant-table-row > td {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  }
+  :global .ant-table-tbody {
+    background: #bef67a;
+    border-bottom: 1px solid #bef67a;
+  }
+  :global .ant-empty-description {
+    color: #33691e;
   }
 }
