--- a/src/App.less
+++ b/src/App.less
@@ -3,6 +3,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  :global .ant-layout {
+    background: #bef67a;
+  }
 }
 .positionHeader {
   flex: 0 0 auto;
