--- a/src/components/PageFooter/PageFooter.less
+++ b/src/components/PageFooter/PageFooter.less
@@ -1,11 +1,14 @@
 .footerStyles {
-  background-color: #d3adf7;
+  background-color: #5a9216;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+  color: #c5e1a5;
+  font-weight: 600;
   width: 1000px;
-  height: 65px;
+  height: 64px;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.5), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
   display: flex;
   margin: auto;
   justify-content: center;
   align-items: center;
-  margin-bottom: 0px;
 }
