--- a/src/components/ModalWindow/ModalWindow.less
+++ b/src/components/ModalWindow/ModalWindow.less
@@ -22,7 +22,7 @@
   :global .ant-modal-close {
     color: black;
   }
-  :global .ant-input {
+  :global(.ant-input, .ant-input-number) {
     border: 1px solid #f0f0f0;
   }
   :global .ant-btn {
