--- a/src/components/Modal/ItemModal/ItemModal.less
+++ b/src/components/Modal/ItemModal/ItemModal.less
@@ -43,12 +43,12 @@
     color: #33691e;
   }
   :global .ant-modal-body {
-    background: #8bc34a;
+    background: #bef67a;
     padding: 24px 24px 1px 24px;
   }
   :global .ant-input {
     border: 1px solid #5a9216;
-    background: #8bc34a;
+    background: #bef67a;
   }
   :global .ant-input:hover {
     background: unset;
@@ -58,6 +58,6 @@
   }
   :global .ant-picker {
     border: 1px solid #5a9216;
-    background: #8bc34a;
+    background: #bef67a;
   }
 }
