--- a/src/components/SpentsTable/SpentsTable.less
+++ b/src/components/SpentsTable/SpentsTable.less
@@ -1,6 +1,6 @@
 .margin {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 20px;
+  margin-bottom: 2px;
 }
 .itemDeleteButton {
   float: right;
@@ -9,13 +9,14 @@
   width: 1000px;
   margin: auto;
   font-weight: 600;
-  box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
   :global .ant-table-row-level-0 {
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
     background-color: #5a9216;
     color: #c5e1a5;
   }
   :global .ant-table-row-level-1 {
-    background-color: #8bc34a;
+    box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
+    background-color: #bef67a;
     color: #33691e;
   }
   :global .ant-table-row-expand-icon {
@@ -28,11 +29,16 @@
   :global .ant-table-tbody > tr.ant-table-row > td {
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   }
+  :global .ant-table-tbody > tr > td {
+    border-bottom: 1px solid #bef67a;
+  }
   :global .ant-table-tbody {
     background: #bef67a;
-    border-bottom: 1px solid #bef67a;
   }
   :global .ant-empty-description {
     color: #33691e;
+  }
+  :global .ant-table-placeholder:hover {
+    background: #bef67a;
   }
 }
