--- a/src/App.less
+++ b/src/App.less
@@ -1,11 +1,15 @@
 .positionElement {
-  margin: 0;
+  width: 1000px;
+  margin: auto;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
   :global .ant-layout {
     background: #bef67a;
   }
+}
+.PagesBackground{
+  background: #bef67a;
 }
 .positionHeader {
   flex: 0 0 auto;
