--- a/src/components/PageFooter/PageFooter.less
+++ b/src/components/PageFooter/PageFooter.less
@@ -4,7 +4,7 @@
   border-top-right-radius: 15px;
   color: #c5e1a5;
   font-weight: 600;
-  width: 1000px;
+  width: 100%;
   height: 64px;
   box-shadow: 0 1px 15px 0 rgba(0, 0, 0, 0.5), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
   display: flex;
