--- a/src/App.less
+++ b/src/App.less
@@ -5,11 +5,11 @@
   flex-direction: column;
   min-height: 100vh;
   :global .ant-layout {
-    background: #bef67a;
+    background-color: #bef67a;
   }
 }
 .PagesBackground{
-  background: #bef67a;
+  background-color: #bef67a;
 }
 .positionHeader {
   flex: 0 0 auto;
