--- a/src/components/PageHeader/Navbar.less
+++ b/src/components/PageHeader/Navbar.less
@@ -1,6 +1,6 @@
 .sitepageheader {
   margin: auto;
-  background: #5a9216;
+  background-color: #5a9216;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 15px 0 rgba(0, 0, 0, 0.2);
