--- a/src/components/SpentsTable/SpentsTable.less
+++ b/src/components/SpentsTable/SpentsTable.less
@@ -10,7 +10,6 @@
   font-weight: 600;
   :global {
     .ant-table-row-level-0 {
-      margin-top: 1rem;
       background-color: #5a9216;
       color: #c5e1a5;
     }
@@ -47,11 +46,9 @@
       width: 18px;
       height: 18px;
     }
-    .ant-table-row-expand-icon:hover,
-    .ant-table-row-expand-icon-collapsed:hover,
-    .ant-table-row-expand-icon:focus,
-    .ant-table-row-expand-icon-collapsed:focus {
-      color: unset;
+    .ant-table-row-expand-icon,
+    .ant-table-row-expand-icon-collapsed {
+       color: unset;
     }
     .ant-table-tbody > tr.ant-table-row:hover > td {
       background-color: unset;
