--- a/src/components/ModalWindow/ModalWindow.less
+++ b/src/components/ModalWindow/ModalWindow.less
@@ -81,7 +81,7 @@
   input:-webkit-autofill:hover,
   input:-webkit-autofill:focus,
   input:-webkit-autofill:active {
-    box-shadow: 0 0 0 20px #bef67a inset;
+    transition: background-color 5000s;
   }
   input::-webkit-input-placeholder {
     color: #33691e;
