--- a/src/components/SpentsTable/SpentsTable.less
+++ b/src/components/SpentsTable/SpentsTable.less
@@ -22,6 +22,9 @@
       box-shadow: 0 1px 5px 0 rgba(0, 0, 0, 0.2),
         0 4px 15px 0 rgba(0, 0, 0, 0.2);
     }
+    .ant-table-tbody > tr.ant-table-row {
+      border-spacing: 0px 11px !important;
+    }
     .ant-table-row-expand-icon {
       background-color: #5a9216;
       border: 1px solid #5a9216;
@@ -48,13 +51,13 @@
     }
     .ant-table-row-expand-icon,
     .ant-table-row-expand-icon-collapsed {
-       color: unset;
+      color: unset;
     }
     .ant-table-tbody > tr.ant-table-row:hover > td {
       background-color: unset;
     }
     .ant-table-tbody > tr.ant-table-row > td {
-      border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+      border-bottom: 5px solid rgba(0, 0, 0, 0.2);
     }
     .ant-table-tbody > tr > td {
       border-bottom: 1px solid #bef67a;
